--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "Demo company",
+  "orgName": "Community Solar",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
